# fastui-demo

./: README.md  main.py  pyproject.toml
